# supermage_legacy

./: .buildinfo  README.md  README.rst  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js
.github/workflows/: PyPI.yaml  test.yaml
_sources/: readme.rst
docs/source/: conf.py
supermage/: __meta__.py
supermage/preprocessing/: gridder.py  yaml_loaders.py  yashar_pregridded.py
supermage/simulators/: cloud_cube.py  cube.py  intensity_models.py  lensed_cube.py  lensed_pixelated_cube.py  pixelated_cube.py  velocity_models.py  visibility_cube.py
supermage/solvers/: MCMC.py  optimization.py  swarm_init.py
supermage/utils/: coord_utils.py  cube_tools.py  math_utils.py  uv_utils.py  visualization_tools.py
